# Mechabellum

./: .gitignore  Mechabellum.ObserverStats.csproj  NOTICE  README.md  TODO.md  pyproject.toml
contracts/: README.md
contracts/match-snapshot/v1/: battle-start.example.json  schema.json
data-collector/: Mechabellum.DataCollector.sln  README.md
data-collector/src/Mechabellum.ObserverStats/: GameLocator.cs  Mechabellum.ObserverStats.csproj  Models.cs  Program.cs  ReplayDirectoryWatcher.cs  ReplayParser.cs  ReplayXmlExtractor.cs  RoundSelector.cs  UnitCatalog.cs
docs/: MEMORY_LAYOUT.md  architecture.md  memory-layout.md
ml/: predict.py  replays.py  requirements.txt  timeline.py  train.py  watch.py
src/: ConsoleRenderer.cs  GameEnums.cs  GameLocator.cs  Models.cs  ObserverMemorySource.cs  Program.cs  ReplayParser.cs  ReplayXmlExtractor.cs  RoundSelector.cs  UnitCatalog.cs
src/mechabellum/: __init__.py
src/mechabellum/cli/: main.py
src/mechabellum/collector/: __init__.py  locator.py  unit_catalog.py
src/mechabellum/collector/memory/: __init__.py  il2cpp_reader.py  layouts.py  live_source.py  windows_process.py
src/mechabellum/collector/replay/: __init__.py  extractor.py  parser.py
src/mechabellum/contracts/: __init__.py  snapshot.py
src/mechabellum/datasets/: __init__.py  exporter.py  jsonl.py
src/mechabellum/features/: __init__.py  baseline.py
src/mechabellum/inference/: __init__.py  predictor.py  timeline.py
src/mechabellum/models/: __init__.py  artifact.py
src/mechabellum/training/: __init__.py  pipeline.py
tests/: test_contract.py  test_features.py  test_live_integration.py  test_memory.py  test_replay.py  test_training.py
win-predictor/: README.md  pyproject.toml
win-predictor/src/mechabellum_ml/: __init__.py  features.py  predict.py  timeline.py  train.py  watch.py
win-predictor/tests/: test_features.py
