[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mechabellum-analytics"
version = "0.1.0"
description = "Mechabellum replay collection, live observation, datasets, training, and win prediction"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE.md", "NOTICE"]
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23,<5",
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
ml = [
  "joblib>=1.4,<2",
  "numpy>=2.1,<3",
  "scikit-learn>=1.6,<2",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
mecha = "mechabellum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/mechabellum/contracts/match-snapshot/v1" = [
  "contracts/match-snapshot/v1/schema.json",
  "contracts/match-snapshot/v1/battle-start.example.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning:joblib.numpy_pickle",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
