[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mechabellum-ml"
version = "0.1.0"
description = "Replay training and spectator win-probability inference for Mechabellum"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4,<2",
  "numpy>=2.1,<3",
  "scikit-learn>=1.6,<2",
]

[project.scripts]
mecha-train = "mechabellum_ml.train:main"
mecha-predict = "mechabellum_ml.predict:main"
mecha-watch = "mechabellum_ml.watch:main"
mecha-timeline = "mechabellum_ml.timeline:main"

[tool.setuptools.packages.find]
where = ["src"]
